完成角色知识库的AI提炼