@@ -1,31 +1,40 @@
 package top.yumbo.ai.omni.core.service.knowledge;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import top.yumbo.ai.omni.knowledge.registry.KnowledgeRegistry;
 import top.yumbo.ai.omni.knowledge.registry.model.KnowledgeDomain;
 import top.yumbo.ai.omni.core.model.KnowledgeDocument;
+import top.yumbo.ai.omni.core.service.rag.RAGServiceFactory;
+import top.yumbo.ai.omni.rag.RagService;
+import top.yumbo.ai.omni.rag.model.Document;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * 知识提取服务
  *
  * <p>从知识域中提取文档</p>
- * <p>注意：这是一个基础实现，实际应用中需要集成 RAG 服务</p>
  *
  * @author OmniAgent Team
  * @since 1.0.0
  */
 @Slf4j
 @Service
-@RequiredArgsConstructor
 public class KnowledgeExtractionService {
 
     private final KnowledgeRegistry knowledgeRegistry;
+
+    @Autowired(required = false)
+    private RAGServiceFactory ragServiceFactory;
+
+    public KnowledgeExtractionService(KnowledgeRegistry knowledgeRegistry) {
+        this.knowledgeRegistry = knowledgeRegistry;
+    }
 
     /**
      * 从域中提取相关文档
@@ -42,29 +51,122 @@ public class KnowledgeExtractionService {
         KnowledgeDomain domain = knowledgeRegistry.findDomainById(domainId)
                 .orElseThrow(() -> new RuntimeException("Domain not found: " + domainId));
 
-        // 2. 从域中查询文档
-        // TODO: 实际应用中应该调用 RAG 服务进行语义搜索
-        // 当前为模拟实现
-        List<KnowledgeDocument> documents = simulateDocumentExtraction(domain, query, maxDocuments);
-
-        log.info("从域 {} 提取了 {} 个文档", domainId, documents.size());
-        return documents;
+        // 2. 尝试使用 RAG 服务进行语义搜索
+        if (ragServiceFactory != null && ragServiceFactory.isRAGServiceAvailable()) {
+            try {
+                return extractFromRAG(domain, query, maxDocuments);
+            } catch (Exception e) {
+                log.warn("从 RAG 提取文档失败，降级到模拟提取: {}", e.getMessage());
+                return simulateDocumentExtraction(domain, query, maxDocuments);
+            }
+        } else {
+            log.warn("RAG 服务���可用，使用模拟提取");
+            return simulateDocumentExtraction(domain, query, maxDocuments);
+        }
     }
 
     /**
-     * 模拟文档提取（占位实现）
-     *
-     * <p>实际应用中应该：</p>
-     * <ul>
-     *     <li>调用 RAG 服务进行语义搜索</li>
-     *     <li>根据相关性得分排序</li>
-     *     <li>返回最相关的文档</li>
-     * </ul>
+     * 从 RAG 服务提取文档（真实实现）
+     */
+    private List<KnowledgeDocument> extractFromRAG(
+            KnowledgeDomain domain,
+            String query,
+            int maxDocuments) {
+
+        log.info("🔍 使用 RAG 服务从域 {} 检索文档", domain.getDomainId());
+
+        try {
+            // 1. 获取域的 RAG 服务
+            RagService ragService = ragServiceFactory.getOrCreateRAGService(domain.getDomainId());
+
+            // 2. 执行语义搜索
+            List<Document> searchResults = ragService.semanticSearch(query, maxDocuments);
+
+            if (searchResults == null || searchResults.isEmpty()) {
+                log.warn("RAG 搜索未返回任何结果");
+                return new ArrayList<>();
+            }
+
+            // 3. 转换为 KnowledgeDocument
+            List<KnowledgeDocument> documents = searchResults.stream()
+                    .map(doc -> convertToKnowledgeDocument(doc, domain))
+                    .collect(Collectors.toList());
+
+            log.info("✅ 从 RAG 提取了 {} 个文档", documents.size());
+            return documents;
+
+        } catch (Exception e) {
+            log.error("RAG 提取失败", e);
+            throw new RuntimeException("Failed to extract from RAG", e);
+        }
+    }
+
+    /**
+     * 将 RAG Document 转换为 KnowledgeDocument
+     */
+    private KnowledgeDocument convertToKnowledgeDocument(Document doc, KnowledgeDomain domain) {
+        return KnowledgeDocument.builder()
+                .id(doc.getId())
+                .title(extractTitle(doc))
+                .content(doc.getContent())
+                .summary(extractSummary(doc))
+                .sourceDomainId(domain.getDomainId())
+                .documentType(domain.getDomainType().name())
+                .relevanceScore(0.8) // 默认相关性，如果需要可以从元数据提取
+                .build();
+    }
+
+    /**
+     * 提取文档标题
+     */
+    private String extractTitle(Document doc) {
+        // 尝试从元数据获取标题
+        if (doc.getMetadata() != null && doc.getMetadata().containsKey("title")) {
+            return String.valueOf(doc.getMetadata().get("title"));
+        }
+
+        // 从内容提取第一行作为标题
+        String content = doc.getContent();
+        if (content != null && !content.isEmpty()) {
+            String[] lines = content.split("\n", 2);
+            String firstLine = lines[0].trim();
+            // 移除 Markdown 标题标记
+            firstLine = firstLine.replaceAll("^#+\\s*", "");
+            if (firstLine.length() > 100) {
+                return firstLine.substring(0, 100) + "...";
+            }
+            return firstLine;
+        }
+
+        return "Untitled Document";
+    }
+
+    /**
+     * 提取文档摘要
+     */
+    private String extractSummary(Document doc) {
+        // 尝试从元数据获取摘要
+        if (doc.getMetadata() != null && doc.getMetadata().containsKey("summary")) {
+            return String.valueOf(doc.getMetadata().get("summary"));
+        }
+
+        // 生成简单摘要（前200字符）
+        String content = doc.getContent();
+        if (content != null && content.length() > 200) {
+            return content.substring(0, 200) + "...";
+        }
+        return content;
+    }
+
+    /**
+     * 模拟文档提取（降级方案）
      */
     private List<KnowledgeDocument> simulateDocumentExtraction(
             KnowledgeDomain domain,
             String query,
             int maxDocuments) {
+
+        log.warn("⚠️ 使用模拟文档提取（降级方案）");
 
         List<KnowledgeDocument> documents = new ArrayList<>();
 
@@ -104,20 +206,19 @@ public class KnowledgeExtractionService {
         }
 
         // 简单的关键词匹配筛选
-        // 实际应用中可以使用更复杂的语义匹配
         String[] keywords = responsibilities.toLowerCase().split("[,，、\\s]+");
 
         return documents.stream()
                 .filter(doc -> {
                     String content = (doc.getContent() + " " + doc.getTitle()).toLowerCase();
                     for (String keyword : keywords) {
-                        if (content.contains(keyword)) {
+                        if (!keyword.isEmpty() && content.contains(keyword)) {
                             return true;
                         }
                     }
                     return false;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 }
 
